# bmi

./: .cfignore  .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  package-lock.json  package.json  wrangler.toml
src/: app.rs  drum.rs  main.rs
styles/: input.css
